# object-cache

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  Makefile  README.md  deps.bzl  go.mod  go.work  go.work.sum
.buildkite/: docker-compose.yml  pipeline.yml
libs/middleware/: BUILD.bazel  go.mod  go.sum  oidc.go
libs/trace/: BUILD.bazel  go.mod  go.sum
sam/app/: bazel-cache-bucket.cfn.yaml  oidc-buildkite.yaml
services/admin/: BUILD.bazel  go.mod
services/store/: BUILD.bazel  Dockerfile  Makefile  api.yaml  go.mod  go.sum  main.go
services/store/internal/commands/: BUILD.bazel  client.go  lambda.go  server.go
services/store/internal/server/: BUILD.bazel  presigner.go  router.go  server.go
services/store/pkg/api/: BUILD.bazel  cache.gen.go
services/store/pkg/client/: BUILD.bazel  cache.gen.go
services/store/sam/app/: repository.cfn.yml
