load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "server",
    srcs = [
        "presigner.go",
        "router.go",
        "server.go",
    ],
    importpath = "github.com/wolfeidau/object-cache/services/store/internal/server",
    visibility = ["//services/store:__subpackages__"],
    deps = [
        "//services/store/pkg/api",
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@com_github_aws_aws_sdk_go_v2_config//:config",
        "@com_github_aws_aws_sdk_go_v2_service_s3//:s3",
        "@com_github_aws_aws_sdk_go_v2_service_s3//types",
        "@com_github_google_uuid//:uuid",
        "@com_github_labstack_echo_v4//:echo",
        "@com_github_oapi_codegen_echo_middleware//:echo-middleware",
        "@com_github_rs_zerolog//log",
        "@com_github_wolfeidau_echo_middleware//:echo-middleware",
    ],
)

go_test(
    name = "server_test",
    srcs = ["presigner_test.go"],
    embed = [":server"],
)
