load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "client",
    srcs = [
        "cache.gen.go",
        "gen.go",
    ],
    importpath = "github.com/wolfeidau/object-cache/services/store/pkg/client",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_getkin_kin_openapi//openapi3",
        "@com_github_oapi_codegen_runtime//:runtime",
    ],
)
